# ClassIsland_Management_Service_OS_Edition

./: .gitignore  README.md  manage.py  pyproject.toml
api/: grpc-contract-summary.md  management-server-api.md  openapi-like-example.json
classisland_management/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  admin_config.py  api_views.py  connection_manager.py  crypto.py  grpc_services.py  manage_api.py  models.py  panel_views.py  urls.py
core/management/commands/: grpcserver.py  initserver.py
core/migrations/: 0001_initial.py  0002_organization_connection_fields.py  0003_config_models.py  0004_update_default_management_ports.py
scripts/: compile_protos.py
static/: .gitkeep
templates/manage/: audit_logs.html  base.html  class_group_detail.html  class_groups.html  client_detail.html  clients.html  config_editor.html  dashboard.html  login.html  organization.html  send_command.html
